[gd_scene load_steps=9 format=3 uid="uid://culfnbhouvjoe"]

[ext_resource type="Script" path="res://Player.gd" id="1_gjw8e"]
[ext_resource type="ArrayMesh" uid="uid://3yufxosm6y2q" path="res://assets/13897_Sci-Fi_Fighter_Ship_v1_l1.obj" id="2_1yoqy"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_bhjth"]
points = PackedVector3Array(-352.523, -416.075, 119.335, -256.049, 934.261, 376.546, -256.049, 934.261, 280.024, -384.681, 966.444, 215.799, -256.049, -255.31, 119.335, -352.523, 98.4037, 280.024, -256.049, -577.142, 215.799, -352.523, 548.365, 119.335, -256.049, 516.181, 151.461, -384.681, -223.277, 151.461, -288.207, 805.528, 376.546, -352.523, 194.651, 87.1231, -352.523, 966.444, 183.645, -352.523, 966.444, 312.207, -384.681, 548.365, 119.335, -256.049, -544.959, 119.335, -288.207, -577.142, 215.799, -384.681, 516.181, 247.869, -352.523, -223.277, 87.1231, -320.365, 1.85403, 87.1231, -384.681, -223.277, 119.335, -288.207, 966.444, 247.869, -352.523, -351.859, 183.645, -256.049, 805.528, 376.546, -256.049, 676.946, 183.645, -288.207, -544.959, 119.335, -384.681, -94.5446, 183.645, -384.681, 966.444, 183.645, -384.681, 934.261, 247.869, -352.523, 837.711, 312.207, -288.207, 934.261, 376.546, -288.207, -577.142, 151.461)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_2cmg0"]
points = PackedVector3Array(-545.471, 162.698, 22.807, -384.681, 998.603, 247.913, -384.681, 998.603, 183.597, -384.681, -62.6131, 87.1231, -449.022, 194.692, -9.35101, -513.285, 966.401, 87.1231, -449.022, 709.095, 215.755, -416.867, -62.6131, 151.439, -545.471, 837.8, 119.281, -384.681, 773.292, 119.281, -513.285, 98.1897, 87.1231, -545.471, 291.195, -9.35101, -449.022, 966.401, 87.1231, -513.285, 98.1897, -9.35101, -384.681, 773.292, 247.913, -384.681, -30.411, 54.9651, -416.867, 998.603, 247.913, -384.681, -62.6131, 151.439, -481.13, 837.8, 54.9651, -416.867, 773.292, 247.913, -384.681, 162.698, 54.9651, -513.285, 966.401, 151.439, -545.471, 869.898, 87.1231, -513.285, 676.893, 151.439, -545.471, 162.698, 54.9651, -513.285, 66.0915, 22.807, -481.13, 323.397, -9.35101, -449.022, 773.292, 54.9651, -513.285, 837.8, 54.9651, -416.867, -62.6131, 87.1231, -449.022, 98.1897, -9.35101, -384.681, 966.401, 151.439)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7vfav"]
points = PackedVector3Array(419.295, 226.894, 22.807, 419.295, 998.603, 247.913, 387.128, 998.603, 247.913, 419.295, -62.6131, 151.439, 547.902, 291.195, -9.35101, 451.447, 966.401, 87.1231, 515.719, 966.401, 151.439, 387.128, -30.411, 54.9651, 547.902, 162.698, 54.9651, 387.128, 966.401, 151.439, 515.719, 676.893, 151.439, 515.719, 98.1897, -9.35101, 387.128, -62.6131, 151.439, 451.447, 226.894, -9.35101, 515.719, 837.8, 54.9651, 419.295, 805.598, 247.913, 387.128, 548.188, 87.1231, 515.719, 966.401, 87.1231, 451.447, 773.292, 54.9651, 483.567, 323.397, -9.35101, 419.295, -62.6131, 87.1231, 515.719, 66.0915, 54.9651, 387.128, 805.598, 247.913, 451.447, 98.1897, -9.35101, 547.902, 323.397, 54.9651, 515.719, 130.392, 87.1231, 387.128, 998.603, 183.597, 419.295, 805.598, 87.1231, 387.128, 194.692, 54.9651, 451.447, 451.998, 183.597, 483.567, 837.8, 54.9651, 547.902, 162.698, 22.807)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_cajuw"]
points = PackedVector3Array(290.638, 934.261, 376.546, 258.48, 934.261, 376.546, 290.638, -577.142, 215.799, 258.48, 516.181, 151.461, 387.112, 966.444, 247.869, 258.48, -544.959, 119.335, 354.954, 98.4037, 280.024, 354.954, 966.444, 183.645, 354.954, 194.651, 87.1231, 387.112, -191.245, 151.461, 387.112, 548.365, 119.335, 258.48, -577.142, 215.799, 258.48, 902.078, 247.869, 354.954, -384.043, 119.335, 290.638, 837.711, 376.546, 354.954, 966.444, 312.207, 354.954, -223.277, 87.1231, 387.112, 548.365, 247.869, 322.796, 1.85403, 87.1231, 354.954, -351.859, 183.645, 354.954, 805.528, 151.461, 387.112, 966.444, 183.645, 387.112, -191.245, 119.335, 290.638, 966.444, 247.869, 290.638, -544.959, 119.335, 258.48, -223.277, 119.335, 387.112, -94.5446, 183.645, 258.48, 837.711, 376.546, 354.954, 837.711, 312.207, 354.954, 548.365, 119.335, 322.796, -512.776, 183.645, 258.48, 676.946, 183.645)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_e5fsr"]
points = PackedVector3Array(258.48, 902.084, 408.628, -256.049, -641.275, 151.508, -30.8669, -1027.31, 183.66, 194.164, 612.656, 87.205, -256.049, 902.084, 408.628, -63.0502, 194.418, 505.178, 226.297, -737.882, 247.964, -223.815, 902.084, 151.508, 258.48, -641.275, 151.508, -63.0502, 580.453, 55.0532, -30.8669, -1027.31, 280.021, 226.297, 902.084, 151.508, 65.5317, 194.418, 505.178, -223.815, -737.882, 247.964, 50.3138, 10.8372, 79.9156, 258.48, 934.286, 280.021, -191.682, 612.656, 87.205, -256.049, 934.286, 312.173, 33.3484, -1027.31, 280.021, -256.049, -544.864, 247.964, 161.981, -480.655, 344.325, -159.499, -673.282, 312.173, 65.5317, 580.453, 55.0532, 258.48, -512.467, 247.964, -48.1761, 11.3342, 78.6701, 33.3484, -1027.31, 183.66, -127.366, 65.8051, 440.78, 258.48, 837.68, 408.628, -256.049, 837.68, 408.628, 161.981, -673.282, 312.173, -127.366, -930.704, 247.964, -256.049, 902.084, 280.021)

[sub_resource type="PrismMesh" id="PrismMesh_u0bj3"]

[node name="Player" type="RigidBody3D"]
transform = Transform3D(0.992042, -0.00815123, 0.12564, 0, 0.997902, 0.0647413, -0.125905, -0.0642261, 0.989961, 0, 0, 0)
lock_rotation = true
script = ExtResource("1_gjw8e")

[node name="TwistPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(0.999992, -0.00390872, -0.000193119, 0.00390091, 0.999517, -0.0308325, 0.000313558, 0.0308315, 0.999525, 0, 0, 0)

[node name="CharacterBody3D" type="CharacterBody3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(0.999991, 0.00404746, 0.000327736, -0.00405587, 0.99948, 0.0319909, -0.000197999, -0.031992, 0.999488, 0, 0, 0)

[node name="ship" type="MeshInstance3D" parent="TwistPivot/PitchPivot/CharacterBody3D"]
transform = Transform3D(-0.00199992, -5.29952e-07, -1.76162e-05, -1.7537e-05, -0.000138788, 0.0019951, -1.75103e-06, 0.00199518, 0.000138778, -0.00927234, -0.467233, -0.118388)
mesh = ExtResource("2_1yoqy")

[node name="@CollisionShape3D@28152" type="CollisionShape3D" parent="TwistPivot/PitchPivot/CharacterBody3D"]
transform = Transform3D(-0.00199992, -5.29952e-07, -1.76162e-05, -1.7537e-05, -0.000138788, 0.0019951, -1.75103e-06, 0.00199518, 0.000138778, -0.00927234, -0.467233, -0.118388)
shape = SubResource("ConvexPolygonShape3D_bhjth")

[node name="@CollisionShape3D@28151" type="CollisionShape3D" parent="TwistPivot/PitchPivot/CharacterBody3D"]
transform = Transform3D(-0.00199992, -5.29952e-07, -1.76162e-05, -1.7537e-05, -0.000138788, 0.0019951, -1.75103e-06, 0.00199518, 0.000138778, -0.00927234, -0.467233, -0.118388)
shape = SubResource("ConvexPolygonShape3D_2cmg0")

[node name="@CollisionShape3D@28150" type="CollisionShape3D" parent="TwistPivot/PitchPivot/CharacterBody3D"]
transform = Transform3D(-0.00199992, -5.29952e-07, -1.76162e-05, -1.7537e-05, -0.000138788, 0.0019951, -1.75103e-06, 0.00199518, 0.000138778, -0.00927234, -0.467233, -0.118388)
shape = SubResource("ConvexPolygonShape3D_7vfav")

[node name="@CollisionShape3D@28149" type="CollisionShape3D" parent="TwistPivot/PitchPivot/CharacterBody3D"]
transform = Transform3D(-0.00199992, -5.29952e-07, -1.76162e-05, -1.7537e-05, -0.000138788, 0.0019951, -1.75103e-06, 0.00199518, 0.000138778, -0.00927234, -0.467233, -0.118388)
shape = SubResource("ConvexPolygonShape3D_cajuw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TwistPivot/PitchPivot/CharacterBody3D"]
transform = Transform3D(-0.00199992, -5.29952e-07, -1.76162e-05, -1.7537e-05, -0.000138788, 0.0019951, -1.75103e-06, 0.00199518, 0.000138778, -0.00927234, -0.467233, -0.118388)
shape = SubResource("ConvexPolygonShape3D_e5fsr")

[node name="prisma" type="MeshInstance3D" parent="TwistPivot/PitchPivot/CharacterBody3D"]
transform = Transform3D(0.999849, -0.0174001, 0, 4.79828e-05, 0.0027572, 0.999996, -0.0174, -0.999845, 0.00275762, -0.000184417, 0, 0)
visible = false
mesh = SubResource("PrismMesh_u0bj3")

[node name="TwistCamera" type="Node3D" parent="."]

[node name="PitchCamera" type="Node3D" parent="TwistCamera"]

[node name="Camera3D" type="Camera3D" parent="TwistCamera/PitchCamera"]
transform = Transform3D(1, 0, 0, 0, 0.963191, 0.268819, 0, -0.268819, 0.963191, 0, 1.14978, 3.27347)
